PROJECT (xymlapack)
SET(CMAKE_VERBOSE_MAKEFILE ON)

include_directories(
  ..
)

FIND_LIBRARY(LAPACK_DIRECTORY lapack)
IF (NOT LAPACK_DIRECTORY) 
   MESSAGE (FATAL_ERROR "LAPACK not found")
ENDIF (NOT LAPACK_DIRECTORY) 

FIND_LIBRARY(BLAS_DIRECTORY blas)
IF (NOT BLAS_DIRECTORY) 
   MESSAGE (FATAL_ERROR "BLAS not found")
ENDIF (NOT BLAS_DIRECTORY) 

FIND_LIBRARY(F2C_DIRECTORY f2c)
IF (NOT F2C_DIRECTORY) 
   MESSAGE (FATAL_ERROR "F2C not found")
ENDIF (NOT F2C_DIRECTORY) 

ADD_SUBDIRECTORY (../xymatrix xymatrix)

add_library(xymlapack
#  xymBLAS.cc
  xymLAPACK.cc
)
